--- a/U3_Ejercicios/Ejercicio_1_XX.ipynb
+++ b/U3_Ejercicios/Ejercicio_1_XX.ipynb
@@ -481,7 +481,6 @@
    "source": [
     "# 15. Función que recibe una lista indefinida de valores y los suma si son números\n",
     "\n",
-    "\n",
     "def suma_valores(*lista):\n",
     "    suma=0\n",
     "    for n in lista:\n",
@@ -521,11 +520,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a1cb87e5-b1f0-4361-b0e2-dc84a7189d72",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Marta', 1.8), ('Luis', 2.0), ('Gema', 1.95)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 21. Mediante una función lambda, ordenar esta lista, players = [('Marta', 1.80), ('Luis', 2.00), ('Gema', 1.95)] \n",
+    "players = [('Marta', 1.80), ('Luis', 2.00), ('Gema', 1.95)]\n",
+    "sorted_players = sorted(players, key=lambda x: x[0], reverse=True)\n",
+    "sorted_players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3efee070-2eae-494e-8523-2f5c7cd8dc29",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[22, 2, 10, 20]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 22. Filtrar una lista mediante lambda y la función filter. A partir de esta lista, \n",
+    "# lst = [33, 3, 22, 2, 11, 1, 10, 20], obtener solo los pares.\n",
+    "lst = [33, 3, 22, 2, 11, 1, 10, 20]\n",
+    "l = list(filter (lambda x: x%2==0, lst))\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f946d5fd-1de3-4c76-86fa-d0b07464a087",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [1, 2, 3, 5, 7, 8, 9, 10]\n",
+    "b = [1, 2, 4, 8, 9]\n",
+    "c = lambda x: x in a,b"
+   ]
   }
  ],
  "metadata": {
@@ -544,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
